<resources>
    <string name="app_name">Consorcio Transportes Andalucia</string>
    <string name="google_maps_key">AIzaSyAgWoroTajBibyp5HRaCXAgyuMLC5iA7j4</string>
    <string name="permission_rationale">Se necesitan permisos para funcionar</string>
    <string name="permission_rationale_ok">Dar Permisos</string>
    <string name="no_work">Funcionalidad no disponible</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Welcome_Screen -->
    <string name="welcome_screen_1_title">Servidores públicos</string>
    <string name="welcome_screen_1_sub_title">Todos los datos que ofrecemos provienen de los servidores del propio consorcio , el mismo que usa la app oficial</string>
    <string name="welcome_screen_2_title">Nuestras metas</string>
    <string name="welcome_screen_2_sub_title">Tenemos el objetivo de ser una alternativa a la app oficial, usando sus mismos datos pero mucho más rapido, elegante y comodo para el usuario</string>
    <string name="welcome_screen_3_title">Explora la app</string>
    <string name="welcome_screen_3_sub_title">Guarda tus paradas y lineas favoritas, encuentra donde recargar tu tarjeta, comprueba el saldo de tu tarjeta y muchas cosas más</string>

    <!-- Progress Dialog -->
    <string name="progress_lineas">Cargando lineas...</string>
    <string name="progress_paradas">Cargando paradas...</string>
    <string name="progress_tarifas">Cargando tarifas...</string>
    <string name="progress_puntos_ventas">Cargando puntos de ventas...</string>

    <!-- Dialog -->
    <string name="dialog_title_warning">Atención</string>
    <string name="dialog_title_need_internet">Necesitamos internet para consultar los datos. Comprueba tu conección y vuelve a intentarlo.</string>
    <string name="dialog_title_ups">Ups...</string>
    <string name="dialog_title_content_ups">Lo sentimos, pero el servidor del consorcio no ha respondido como esperabamos o esta caido.</string>
    <string name="dialog_txt_ok">Entendido</string>

    <!-- Home Activity -->
    <string name="title_home">Principal</string>
    <string name="fav_home">Lineas favoritas</string>
    <string name="fav_home_no_content">No hay ninguna linea favorita.</string>
    <string name="fav_home_paradas_no_content">No hay ninguna parada favorita.</string>
    <string name="fav_home_paradas">Paradas favoritas</string>

    <!-- Tarifas Activity -->
    <string name="title_tarifas">Tarifas</string>


    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>

    <!-- Paradas Activity -->
    <string name="title_activity_paradas">Paradas</string>
    <string name="title_windows_adapter_paradas">Parada</string>
    <string name="info_windows_adapter_paradas"><u>Ver detalle de la parada</u></string>
    <string name="parada_add_favourite">Parada añadida a favoritos</string>
    <string name="parada_remove_favourite">Parada eliminada de favoritos</string>

    <!-- Paradas Detail -->
    <string name="parada_detail_view_correspondecias_title">Corresponde con:</string>
    <string name="parada_detail_view_main_municipio_title">Municipio:</string>
    <string name="parada_detail_view_main_nucleo_title">Nucleo: </string>
    <string name="parada_detail_view_ir_a_mapa_title"><u>Ver parada en el mapa</u></string>

    <!-- Horarios Activity -->
    <string name="title_activity_horarios">Horarios</string>

    <!-- Puntos De Ventas Activity -->
    <string name="title_activity_puntos_venta">Puntos de Venta y Recarga</string>
    <string name="info_bussines_unknow_puntos_venta">Negocio desconocido</string>
    <string name="info_windows_adapter_puntoventa"><u>Ir a recargar la tarjeta</u></string>


    <!-- Saldo Activity -->
    <string name="title_activity_saldo">Saldo</string>
    <string name="proximamente_activity_saldo">Proximamente</string>
    <string name="content_activity_saldo">Acerca el telefono a tu tarjeta para conocer tu saldo</string>

    <!-- Consorcio Detail Activity -->
    <string name="title_activity_consorcio_detail">Mi Consorcio</string>

    <!-- Centro de atencion-->
    <string name="title_centro_atencion">Centro de atención</string>

    <!-- Lineas Activity -->
    <string name="title_activity_lineas">Lineas del consorcio</string>

    <!-- Lineas Origen Y Destino Activity -->
    <string name="title_activity_lineas_origen_destino">Lineas por municipio</string>
    <string name="municipio_origen__activity_lineas_origen_destino">Municipio</string>
    <string name="municipio_destino__activity_lineas_origen_destino">Municipio destino</string>
    <string name="nucleo_origen__activity_lineas_origen_destino">Nucleo</string>
    <string name="nucleo_destino__activity_lineas_origen_destino">Nucleo destino</string>
    <string name="no_content_activity_lineas_origen_destino">No existen lineas. Prueba con otros destinos </string>

    <!-- Linea Detail Activity -->
    <string name="title_activity_linea_detail">Detalle de lineas</string>
    <string name="linea_detail_view_warning_title">Atención</string>
    <string name="linea_detail_view_noticias_title">Noticias</string>
    <string name="linea_detail_view_noticias_no_data">No hay noticias para esta linea</string>
    <string name="linea_detail_view_operadores_title">Operadora</string>
    <string name="linea_detail_view_recorrido_title">Recorrido</string>
    <string name="linea_detail_view_main_termometro_ida"><u>Ver paradas ida</u></string>
    <string name="linea_detail_view_main_termometro_vuelta"><u>Ver paradas vuelta</u></string>
    <string name="linea_detail_radio_button_ida">Ida</string>
    <string name="linea_detail_radio_button_vuelta">Vuelta</string>
    <string name="linea_detail_no_itinerary">Lo sentimos ,  la junta no contiene datos sobre este itinerario</string>
    <string name="linea_add_favourite">Linea añadida a favoritos</string>
    <string name="linea_remove_favourite">Linea eliminada de favoritos</string>

    <string name="mi_consorcio_no_email">No tenemos el email de este consorcio</string>
    <string name="mi_consorcio_no_web">No tenemos la web de este consorcio</string>
    <string name="mi_consorcio_no_phone">No tenemos el teléfono de este consorcio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
