<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_paradas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_paradas" />
        <item
            android:id="@+id/nav_horarios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_horarios" />
        <item
            android:id="@+id/nav_puntos_venta"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_activity_puntos_venta" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Saldo" />
    </group>

    <item android:title="Consorcio">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Datos del Consorcio" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Centro de Atención" />
        </menu>
    </item>

</menu>
