<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.consorcio.consorciotransportesandalucia.fragments.LineaItinerarioFragment">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:elevation="@dimen/general_elevation"
        android:layout_margin="10sp"
        android:background="@drawable/layout_bg_rounded"
        android:alpha="0.5"
        android:paddingEnd="3sp">

        <RadioButton
            android:id="@+id/linea_detail_radio_button_ida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linea_detail_radio_button_ida" />
        <RadioButton
            android:id="@+id/linea_detail_radio_button_vuelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linea_detail_radio_button_vuelta" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/linea_detail_map_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.consorcio.consorciotransportesandalucia.fragments.LineaItinerarioFragment"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/linea_detail_no_itinerary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="35sp"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="@string/linea_detail_no_itinerary"/>

</FrameLayout>
