<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.consorcio.consorciotransportesandalucia.fragments.LineasOrigenDestinoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- ORIGEN  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/municipio_origen__activity_lineas_origen_destino"/>

                <Spinner
                    android:id="@+id/spinner_mun_origen"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nucleo_origen__activity_lineas_origen_destino"/>

                <Spinner
                    android:id="@+id/spinner_nuc_origen"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>

            </LinearLayout>

        </LinearLayout>
        <!-- DESTINO  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/municipio_destino__activity_lineas_origen_destino"/>

                <Spinner
                    android:id="@+id/spinner_mun_destino"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nucleo_destino__activity_lineas_origen_destino"/>

                <Spinner
                    android:id="@+id/spinner_nuc_destino"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>

            </LinearLayout>

        </LinearLayout>

        <!-- LISTADO -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_lineas_origen_destino_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</FrameLayout>
