<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miguebarrera.consorciotransportesandalucia.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/general_margin_frame">

            <ImageView
                android:id="@+id/fragment_home_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_main"/>

            <TextView
                android:id="@+id/home_text_info_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_toRightOf="@id/fragment_home_arrow"
                android:text="Desliza el menu para acceder a las diferentes categorias"
                android:textAlignment="center"/>

            <!-- LINES VIEW -->
            <LinearLayout
                android:id="@+id/fragment_home_lin_fav"
                android:layout_below="@id/fragment_home_arrow"
                android:layout_width="match_parent"
                android:layout_marginTop="40sp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/home_favourite_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_home"
                    android:layout_marginStart="20sp"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/general_elevation"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginTop="2sp"
                    android:layout_marginBottom="14sp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8sp">

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fragment_home_lines_recycler"
                            android:nestedScrollingEnabled="false"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/fragment_home_lines_text_no_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:visibility="gone"
                            android:text="@string/fav_home_no_content"
                            android:layout_centerInParent="true"/>

                        <ProgressBar
                            android:id="@+id/fragment_home_lines_progressBar"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>


                </android.support.v7.widget.CardView>
            </LinearLayout>

            <!-- PARADAS VIEW -->
            <LinearLayout
                android:layout_below="@id/fragment_home_lin_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin_frame"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/home_favourite_parada_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_home_paradas"
                    android:layout_marginStart="20sp"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/general_elevation"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginTop="2sp"
                    android:layout_marginBottom="14sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8sp">

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fragment_home_paradas_recycler"
                            android:nestedScrollingEnabled="false"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/fragment_home_paradas_text_no_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textAlignment="center"
                            android:visibility="gone"
                            android:text="@string/fav_home_paradas_no_content"/>

                        <ProgressBar
                            android:id="@+id/fragment_home_paradas_progressBar"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:layout_centerInParent="true"/>


                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</FrameLayout>
