<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.consorcio.consorciotransportesandalucia.fragments.ParadaDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="14sp">

            <ImageView
                android:id="@+id/parada_detail_icon"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@mipmap/busstop"
                android:scaleType="fitXY"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="35sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="12sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parada_detail_view_main_municipio_title"/>

                        <TextView
                            android:id="@+id/parada_detail_municipio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parada_detail_view_main_nucleo_title"/>

                        <TextView
                            android:id="@+id/parada_detail_nucleo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>

       <!-- <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="14sp">

            <ImageView
                android:id="@+id/parada_detail_icon"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@mipmap/busstop"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="35sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parada_detail_view_main_municipio_title"/>

                    <TextView
                        android:id="@+id/parada_detail_municipio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parada_detail_view_main_nucleo_title"/>

                    <TextView
                        android:id="@+id/parada_detail_nucleo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>-->

        <TextView
            android:id="@+id/parada_detail_ir_a_mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16sp"
            android:text="@string/parada_detail_view_ir_a_mapa_title"/>

        <!-- CORRESPONDENCIAS VIEW -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parada_detail_view_correspondecias_title"
            android:layout_marginStart="20sp"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/general_elevation"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="14sp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8sp">
                <TextView
                    android:id="@+id/parada_detail_view_correspondecia_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>
